force-app/main/default/objects/Asset/fields/Incoterms_Value__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Value__c</fullName>
    <description>Text field to hold the Price_Includes_Delivery__c picklist value.</description>
    <inlineHelpText>The value from the Opportunity Product Incoterms picklist</inlineHelpText>
    <label>Incoterms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>