force-app/main/default/objects/Asset/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PALETA ANIFE RETORNABLE 1200X1000X155</fullName>
            </value>
            <value>
                <fullName>PALETA VMF RETORNABLE 1200X1000X154</fullName>
            </value>
            <value>
                <fullName>PLANCHA PP CARTONPLAST PCA 1200X1000 ALV</fullName>
            </value>
            <value>
                <fullName>PLANCHA PP VIDRALA PVE EXPORT 1200X1000</fullName>
            </value>
            <value>
                <fullName>PALETA RG01 RETORNAB. ALIG 1200X1000X125</fullName>
            </value>
            <value>
                <fullName>PLACA PP SMARTPAD 1200X1000 2,6 -3mm PSM</fullName>
            </value>
            <value>
                <fullName>TOP FRAME - 25 mm</fullName>
            </value>
            <value>
                <fullName>PALETES HK RETORNABLE 1200X1000X162</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>