force-app/main/default/objects/Asset/fields/Material_Value__c.field-meta.xml
<CustomField>
    <fullName>Material_Value__c</fullName>
    <description>Text field to hold the Material Picklist value from the Packaging Agreement</description>
    <inlineHelpText>Picklist value from the Packaging Agreement.</inlineHelpText>
    <label>Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>