force-app/main/default/objects/Asset/fields/OM_MaterialDescriptionRef__c.field-meta.xml
<CustomField>
    <fullName>OM_MaterialDescriptionRef__c</fullName>
    <formula>OM_VID_Material__r.OM_Description__c</formula>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>