force-app/main/default/objects/Asset/fields/OM_VID_AccountProductCode__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_AccountProductCode__c</fullName>
    <externalId>true</externalId>
    <label>Account Product Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>