force-app/main/default/objects/Asset/fields/OM_VID_Material__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Material Code</label>
    <referenceTo>SAP_Material_Code__c</referenceTo>
    <relationshipLabel>Account Products</relationshipLabel>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>