force-app/main/default/objects/Asset/fields/OM_VID_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_SalesOrganization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VD10</fullName>
            </value>
            <value>
                <fullName>VD50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>