force-app/main/default/objects/Asset/fields/OM_VID_SAP_AccountReference__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_SAP_AccountReference__c</fullName>
    <label>SAP Account Reference</label>
    <length>12</length>
    <type>Text</type>
</CustomField>