force-app/main/default/objects/Asset/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1010</fullName>
                <label>Aiala Vidrio</label>
            </value>
            <value>
                <fullName>1020</fullName>
                <label>Crisnova Vidrio</label>
            </value>
            <value>
                <fullName>1030</fullName>
                <label>Castellar Vidrio</label>
            </value>
            <value>
                <fullName>1040</fullName>
                <label>Gallo Vidrio</label>
            </value>
            <value>
                <fullName>1090</fullName>
                <label>Santos Barosa</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <label>Almacén externo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>