force-app/main/default/objects/Asset/fields/Plant_Value__c.field-meta.xml
<CustomField>
    <fullName>Plant_Value__c</fullName>
    <description>Text field to hold the Plant Picklist value from the MPA(Fifty) object.</description>
    <inlineHelpText>The text value of the MPA Plant Picklist</inlineHelpText>
    <label>Plant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>