force-app/main/default/objects/Asset/fields/Price_1000__c.field-meta.xml
<CustomField>
    <fullName>Price_1000__c</fullName>
    <label>Price / 1000</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>