force-app/main/default/objects/Asset/fields/Price_ton__c.field-meta.xml
<CustomField>
    <fullName>Price_ton__c</fullName>
    <label>Price /ton</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>