force-app/main/default/objects/Asset/fields/Sales_Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Name__c</fullName>
    <description>Set by Owner via User Record</description>
    <formula>TEXT( Owner.Sales_Organisation_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Set by Owner via User Record</inlineHelpText>
    <label>Sales Org Name</label>
    <type>Text</type>
</CustomField>