force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>OM_VID_Material__c</columns>
    <columns>Price_1000__c</columns>
    <columns>ASSET.CURRENCY_ISO_CODE</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Account Products</label>
</ListView>