force-app/main/default/objects/Asset/listViews/Lista_con_productos_y_precios.listView-meta.xml
<ListView>
    <fullName>Lista_con_productos_y_precios</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>Price_1000__c</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>Incoterms__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incoterms__c</field>
        <operation>equals</operation>
        <value>EX WORKS,FCA</value>
    </filters>
    <label>Lista con productos y precios</label>
</ListView>