force-app/main/default/objects/Asset/listViews/Precios_Fifty_desde_el_1_de_mayo_2023.listView-meta.xml
<ListView>
    <fullName>Precios_Fifty_desde_el_1_de_mayo_2023</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>ASSET.CURRENCY_ISO_CODE</columns>
    <columns>Price_1000__c</columns>
    <columns>ASSET.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.INSTALL_DATE</field>
        <operation>equals</operation>
        <value>5/1/2023</value>
    </filters>
    <label>Precios Fifty desde el 1 de mayo 2023</label>
</ListView>