force-app/main/default/objects/Asset/listViews/Precios_fifty_por_incoterm.listView-meta.xml
<ListView>
    <fullName>Precios_fifty_por_incoterm</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Incoterms__c</columns>
    <columns>Price_1000__c</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incoterms__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Fifty desde el 01/05/23 por incoterm</label>
</ListView>